--- a/app/src/main/res/layout/child_hr_land_situation.xml
+++ b/app/src/main/res/layout/child_hr_land_situation.xml
@@ -234,7 +234,7 @@
                             android:hint="临街宽度(m)"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{ citySellRent.widthToStreet}'
+                                android:text='@={ citySellRent.widthToStreet}'
                                 android:id="@+id/et_width_to_street"
                                 android:enabled='@{editable}'
                                 android:layout_width="match_parent"
@@ -247,7 +247,7 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:enabled='@{editable}'
-                                android:text='@{ citySellRent.depthToStreet}'
+                                android:text='@={ citySellRent.depthToStreet}'
                                 android:id="@+id/et_depth_to_street"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
