--- a/app/src/main/res/layout/child_hs_land_situation.xml
+++ b/app/src/main/res/layout/child_hs_land_situation.xml
@@ -236,7 +236,7 @@
                             android:hint="临街宽度(m)"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{ citySellRent.widthToStreet}'
+                                android:text='@={ citySellRent.widthToStreet}'
                                 android:enabled="@{editable}"
                                 android:id="@+id/et_width_to_street"
                                 android:layout_width="match_parent"
@@ -248,7 +248,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{ citySellRent.depthToStreet}'
+                                android:text='@={ citySellRent.depthToStreet}'
                                 android:id="@+id/et_depth_to_street"
                                 android:enabled="@{editable}"
                                 android:layout_width="match_parent"
