--- a/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -10,6 +10,10 @@
             android:id="@+id/nav_exit"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="退出" />
+        <item
+            android:id="@+id/about_imformation"
+            android:icon="@drawable/ic_info_black_24dp"
+            android:title="关于"/>
     </group>
 
     <!--<item android:title="Communicate">-->
