添加了可以手动点击地图定位，但还没有测试

--- a/app/src/main/res/layout/activity_map_activity.xml
+++ b/app/src/main/res/layout/activity_map_activity.xml
@@ -44,6 +44,15 @@
                     android:id="@+id/button_cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="?actionBarSize"/>
+                <TextView
+                    android:text="手动定位"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:layout_marginEnd="8dp"
+                    android:textColor="@android:color/white"
+                    android:id="@+id/button_manual"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?actionBarSize"/>
 
 
                 <TextView
