升级了gradle版本

--- a/app/src/main/res/layout/activity_commercial_house_trade.xml
+++ b/app/src/main/res/layout/activity_commercial_house_trade.xml
@@ -15,7 +15,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.CommercialHouseTradeModel" />
         <variable
             name="editable"
-            type="Boolean"/>
+            type="boolean"/>
     </data>
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
