--- a/app/src/main/res/layout/activity_house_rent.xml
+++ b/app/src/main/res/layout/activity_house_rent.xml
@@ -14,7 +14,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.HouseRentModel" />
         <variable
             name="editable"
-            type="Boolean"/>
+            type="boolean"/>
     </data>
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
