--- a/app/src/main/res/layout/activity_shop_rent.xml
+++ b/app/src/main/res/layout/activity_shop_rent.xml
@@ -16,7 +16,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.ShopRentModel" />
         <variable
             name="editable"
-            type="Boolean"/>
+            type="boolean"/>
     </data>
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
