--- a/app/src/main/res/layout/child_chs_building_situation.xml
+++ b/app/src/main/res/layout/child_chs_building_situation.xml
@@ -10,7 +10,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.CommercialHouseTradeModel" />
         <variable
             name="editable"
-            type="Boolean"/>
+            type="boolean"/>
         <variable
             name="citySellRent"
             type="org.chengjian.java.feidian.collectdata.beans.CitySellRent"/>
