--- a/app/src/main/res/layout/child_hs_trade_situation.xml
+++ b/app/src/main/res/layout/child_hs_trade_situation.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="editable"
-            type="Boolean"/>
+            type="boolean"/>
 
         <variable
             name="model"
