--- a/app/src/main/res/layout/child_sr_land_situation.xml
+++ b/app/src/main/res/layout/child_sr_land_situation.xml
@@ -10,7 +10,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.CitySellRent"/>
         <variable
             name="editable"
-            type="Boolean"/>
+            type="boolean"/>
     </data>
 
     <android.support.v7.widget.CardView
