--- a/app/src/main/res/layout/child_sr_rent_situation.xml
+++ b/app/src/main/res/layout/child_sr_rent_situation.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="editable"
-            type="Boolean"/>
+            type="boolean"/>
 
         <variable
             name="model"
