--- a/app/src/main/res/layout/activity_house_rent.xml
+++ b/app/src/main/res/layout/activity_house_rent.xml
@@ -8,10 +8,10 @@
         <import type="android.view.View" />
         <variable
             name="citySellRent"
-            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent" />
+            type="org.chengjian.java.feidian.collectdata.beans.CityCommonAttributes" />
         <variable
             name="model"
-            type="org.chengjian.java.feidian.collectdata.beans.HouseRentModel" />
+            type="org.chengjian.java.feidian.collectdata.beans.HouseRent" />
         <variable
             name="editable"
             type="boolean"/>
