--- a/app/src/main/res/layout/activity_shop_rent.xml
+++ b/app/src/main/res/layout/activity_shop_rent.xml
@@ -9,11 +9,11 @@
 
         <variable
             name="citySellRent"
-            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent" />
+            type="org.chengjian.java.feidian.collectdata.beans.CityCommonAttributes" />
 
         <variable
             name="model"
-            type="org.chengjian.java.feidian.collectdata.beans.ShopRentModel" />
+            type="org.chengjian.java.feidian.collectdata.beans.CounterRent" />
         <variable
             name="editable"
             type="boolean"/>
