--- a/app/src/main/res/layout/child_base.xml
+++ b/app/src/main/res/layout/child_base.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="citySellRent"
-            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent"/>
+            type="org.chengjian.java.feidian.collectdata.beans.CityCommonAttributes"/>
         <variable
             name="editable"
             type="boolean"/>
