--- a/app/src/main/res/layout/child_chs_building_situation.xml
+++ b/app/src/main/res/layout/child_chs_building_situation.xml
@@ -6,14 +6,14 @@
 
     <data>
         <variable
-            name="commercialHouseTradeModel"
-            type="org.chengjian.java.feidian.collectdata.beans.CommercialHouseTradeModel" />
+            name="commercialHousingForSale"
+            type="org.chengjian.java.feidian.collectdata.beans.CommercialHousingForSale" />
         <variable
             name="editable"
             type="boolean"/>
         <variable
             name="citySellRent"
-            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent"/>
+            type="org.chengjian.java.feidian.collectdata.beans.CityCommonAttributes"/>
     </data>
     <android.support.v7.widget.CardView
         app:cardCornerRadius="10dp"
@@ -124,7 +124,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={ commercialHouseTradeModel.floorNum}'
+                            android:text='@={ commercialHousingForSale.floorNum}'
                             android:id="@+id/et_floor_num"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -137,7 +137,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={ commercialHouseTradeModel.houseStandardPrice}'
+                            android:text='@={ commercialHousingForSale.houseStandardPrice}'
                             android:id="@+id/et_house_standard_price"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -149,7 +149,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.buildingProjectPrice}'
+                            android:text='@={commercialHousingForSale.buildingProjectPrice}'
                             android:id="@+id/et_building_project_price"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -161,7 +161,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.serviceFee}'
+                            android:text='@={commercialHousingForSale.serviceFee}'
                             android:id="@+id/et_service_fee"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -173,7 +173,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.otherDirectFee}'
+                            android:text='@={commercialHousingForSale.otherDirectFee}'
                             android:id="@+id/et_other_direct_fee"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -185,7 +185,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.manageFeeAndProfit}'
+                            android:text='@={commercialHousingForSale.manageFeeAndProfit}'
                             android:id="@+id/et_manage_fee_and_profit"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -197,7 +197,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.unPredictedFee}'
+                            android:text='@={commercialHousingForSale.unPredictedFee}'
                             android:id="@+id/et_unpredicted_fee"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -209,7 +209,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.landCompensateFee}'
+                            android:text='@={commercialHousingForSale.landCompensateFee}'
                             android:id="@+id/et_land_compensate_fee"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -221,7 +221,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.agentFee}'
+                            android:text='@={commercialHousingForSale.agentFee}'
                             android:id="@+id/et_agent_fee"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -233,7 +233,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.cityBigSuiteFee}'
+                            android:text='@={commercialHousingForSale.cityBigSuiteFee}'
                             android:id="@+id/et_city_big_suit_fee"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -245,7 +245,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@={commercialHouseTradeModel.otherFee}'
+                            android:text='@={commercialHousingForSale.otherFee}'
                             android:id="@+id/et_other_fee"
                             android:inputType="text"
                             android:layout_width="match_parent"
