--- a/app/src/main/res/layout/child_hr_rent_situation.xml
+++ b/app/src/main/res/layout/child_hr_rent_situation.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="model"
-            type="org.chengjian.java.feidian.collectdata.beans.HouseRentModel" />
+            type="org.chengjian.java.feidian.collectdata.beans.HouseRent" />
     </data>
 
     <android.support.v7.widget.CardView
