--- a/app/src/main/res/layout/child_hs_land_situation.xml
+++ b/app/src/main/res/layout/child_hs_land_situation.xml
@@ -7,7 +7,7 @@
         <import type="android.view.View"/>
         <variable
             name="citySellRent"
-            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent"/>
+            type="org.chengjian.java.feidian.collectdata.beans.CityCommonAttributes"/>
         <variable
             name="editable"
             type="boolean"/>
