--- a/app/src/main/res/layout/child_hs_trade_situation.xml
+++ b/app/src/main/res/layout/child_hs_trade_situation.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="model"
-            type="org.chengjian.java.feidian.collectdata.beans.HouseTradeModel" />
+            type="org.chengjian.java.feidian.collectdata.beans.HouseSalePrice" />
     </data>
 
     <android.support.v7.widget.CardView
